force-app/main/default/objects/Destinations__c/Destinations__c.object-meta.xml
<CustomObject>
    <label>Destinations</label>
    <nameField>
        <label>Destinations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Destinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>