force-app/main/default/objects/Destinations__c/fields/Hero_Image__c.field-meta.xml
<CustomField>
    <fullName>Hero_Image__c</fullName>
    <label>Hero Image</label>
    <type>Url</type>
</CustomField>