force-app/main/default/objects/Destinations__c/fields/Secondary_Image__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Image__c</fullName>
    <label>Secondary Image</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>