force-app/main/default/objects/Destinations__c/fields/Testtodeploy__c.field-meta.xml
<CustomField>
    <fullName>Testtodeploy__c</fullName>
    <label>Testtodeploy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>