force-app/main/default/objects/Destinations__c/fields/Web_Description__c.field-meta.xml
<CustomField>
    <fullName>Web_Description__c</fullName>
    <label>Web Description</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>